--- a/part1/public/index.html
+++ b/part1/public/index.html
@@ -9,7 +9,7 @@
     body {
       background: linear-gradient(45deg, rgb(255, 0, 0), rgb(0, 255, 13), rgb(0, 0, 0), rgb(0, 255, 221));
       animation: spin 5s infinite linear;
-      font-family: 'Creepster', cursive;
+      font-family: 'Tilt Prism', cursive;
       animation: shake2 0.1s infinite;
     }
 
@@ -42,6 +42,7 @@
     button {
       padding: 50px;
       font-size: 32px;
+      font-family: 'Tilt Prism', cursive;
       background-color: yellow;
       color: red;
       border: 10px dotted green;
