--- a/part2/public/index.html
+++ b/part2/public/index.html
@@ -10,20 +10,85 @@
 <body class="bg-light">
 
   <div id="app" class="container py-5">
-    <h1 class="mb-4 text-primary">{{ message }}</h1>
-    <p class="lead">Connect with trusted walkers for your beloved dog!</p>
+    <h1 class="mb-4 text-primary text-center w-50 mx-auto">{{ message }}</h1> <!-- Changed to text-center and w-50 mx-auto for centering -->
 
-    <a href="owner-dashboard.html" class="btn btn-outline-primary me-2">Owner Dashboard</a>
-    <a href="walker-dashboard.html" class="btn btn-outline-success">Walker Dashboard</a>
+    <form @submit.prevent="login" class="w-50 mx-auto">
+      <div class="form-group mb-3">
+        <input
+          v-model="email"
+          type="email"
+          class="form-control"
+          placeholder="Email"
+          required
+        />
+      </div>
+      <!--Deleted buttons for owners and for walkers-->
+
+      <div class="form-group mb-3">
+        <input
+          v-model="password"
+          type="password"
+          class="form-control"
+          placeholder="Password"
+          required
+        />
+      </div>
+
+      <button class="btn btn-primary w-100" type="submit">Log In</button>
+
+      <p class="text-danger mt-3" v-if="error">{{ error }}</p>
+    </form>
+
+    <p class="lead text-center mt-5">Connect with trusted walkers for your beloved dog!</p>
   </div>
 
   <script>
     const { createApp } = Vue;
+    // Initialize Vue app
     createApp({
       data() {
         return {
-          message: 'Welcome to the Dog Walking Service!'
+          message: 'Welcome to the Dog Walking Service!',
+          email: '', // Changed to email for login
+          password: '', // Changed to password for login
+          error: '' // Error message for login
         };
+      },
+      methods: {
+        async login() {
+          this.error = '';
+          try {
+            // Send login request to the server
+            if (!this.email || !this.password) {
+              this.error = 'Email and password are required';
+              return;
+            }
+            const response = await fetch('/api/users/login', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              // Changed to POST request for login
+              body: JSON.stringify({
+                email: this.email,
+                password: this.password
+              })
+            });
+
+            if (response.ok) { // Check if the response is OK
+              const result = await response.json();
+              if (result.role === 'owner') {
+                window.location.href = '/owner-dashboard'; // Redirect to owner dashboard
+              } else if (result.role === 'walker') {
+                window.location.href = '/walker-dashboard'; // Redirect to walker dashboard
+              }
+            } else {
+              const err = await response.json();
+              this.error = err.error || err.message || 'Login failed'; // Display error message from server
+            }
+          } catch (err) {
+            this.error = 'Server error'; // Handle network or server errors
+            console.error('Login error:', err);
+          }
+        }
       }
     }).mount('#app');
   </script>
