--- a/part2/public/walker-dashboard.html
+++ b/part2/public/walker-dashboard.html
@@ -9,7 +9,11 @@
 </head>
 <body class="bg-light">
   <div id="app" class="container py-4">
-    <h1 class="mb-4 text-success">Walker Dashboard</h1>
+    <!-- Header with title and logout button -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h1 class="text-primary mb-0">Walker Dashboard</h1>
+      <button class="btn btn-outline-danger" @click="logout">Log Out</button>
+    </div>
 
     <!-- Alert messages -->
     <div v-if="message" class="alert alert-info">{{ message }}</div>
@@ -77,12 +81,21 @@
         onMounted(() => {
           loadWalkRequests();
         });
-
+        // Logout function to clear session and redirect
+        async function logout() {
+          try {
+            await fetch('/api/users/logout', { method: 'POST' });
+            window.location.href = '/'; // Redirect to home page after logout
+          } catch (err) {
+            error.value = 'Logout failed';
+          }
+        }
         return {
           walks,
           message,
           error,
-          applyToWalk
+          applyToWalk, 
+          logout
         };
       }
     }).mount('#app');
