--- a/part2/public/owner-dashboard.html
+++ b/part2/public/owner-dashboard.html
@@ -9,7 +9,12 @@
 </head>
 <body class="bg-light">
   <div id="app" class="container py-4">
-    <h1 class="mb-4 text-primary">Owner Dashboard</h1>
+    <!-- Header with title and logout button -->
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h1 class="text-primary mb-0">Owner Dashboard</h1>
+      <button class="btn btn-outline-danger" @click="logout">Log Out</button>
+    </div>
+    
 
     <!-- Walk request form -->
     <div class="card mb-4">
@@ -118,13 +123,23 @@
         onMounted(() => {
           loadWalks();
         });
+        // Logout function to clear session and redirect
+        async function logout() {
+          try {
+            await fetch('/api/users/logout', { method: 'POST' });
+            window.location.href = '/'; // Redirect to home page after logout
+          } catch (err) {
+            error.value = 'Logout failed';
+          }
+        }
 
         return {
           form,
           walks,
           message,
           error,
-          submitWalkRequest
+          submitWalkRequest,
+          logout
         };
       }
     }).mount('#app');
